11712406-project2/test/test_11712406_4.out
Error type 9 at Line 18: function's args mismatch the declared para